WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303609
[iOS] Caption Style menu selected item does not update
https://bugs.webkit.org/show_bug.cgi?id=303609
Summary
[iOS] Caption Style menu selected item does not update
Jer Noble
Reported
2025-12-04 22:22:26 PST
[iOS] Caption Style menu selected item does not update
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-04 22:22:33 PST
<
rdar://problem/165893506
>
Jer Noble
Comment 2
2025-12-04 22:25:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54903
EWS
Comment 3
2025-12-05 11:41:35 PST
Committed
304006@main
(1e412dbc637a): <
https://commits.webkit.org/304006@main
> Reviewed commits have been landed. Closing PR #54903 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug