[iOS] Caption Style menu selected item does not update rdar://165893506 https://bugs.webkit.org/show_bug.cgi?id=303609

Reviewed by Eric Carlson.

On iOS, a UIMenu is immutable once it's presented. To update
the selected state of a menu requires calling -updateVisibleMenu:
and returning a new UIMenu structure.

When a caption profile is selected, iterate over the presented UIMenu
structure and replace the previous captions style menu with a rebuilt
one.

* Source/WebKit/UIProcess/Cocoa/_WKCaptionStyleMenuController.h:
* Source/WebKit/UIProcess/ios/WKActionSheetAssistant.mm:
(-[WKActionSheetAssistant captionStyleMenu:didSelectProfile:]):
* Source/WebKit/UIProcess/ios/_WKCaptionStyleMenuControllerAVKit.mm:
(-[_WKCaptionStyleMenuControllerAVKit legibleMenuController:didRequestCaptionPreviewForProfileID:]):

Canonical link: https://commits.webkit.org/304006@main