Source/WebKit/UIProcess/ios/WKActionSheetAssistant.mm
@@ -102,6 +102,7 @@ static LSAppLink *appLinkForURL(NSURL *url)
 @interface WKActionSheetAssistant () <WKCaptionStyleMenuControllerDelegate>
 - (void)captionStyleMenuWillOpen:(PlatformMenu *)menu;
 - (void)captionStyleMenuDidClose:(PlatformMenu *)menu;
+- (void)captionStyleMenu:(PlatformMenu *)menu didSelectProfile:(NSString *)profileID;
 @end
 #endif
 
@@ -920,6 +921,39 @@ ALLOW_DEPRECATED_DECLARATIONS_END
 {
     if ([_delegate respondsToSelector:@selector(captionStyleMenuWillOpenWithFrameInfo:identifier:)] && _mediaElementIdentifier && _frameInfo)
         [_delegate captionStyleMenuWillOpenWithFrameInfo:*_frameInfo identifier:*_mediaElementIdentifier];
+}
+
+- (void)captionStyleMenu:(PlatformMenu *)captionStyleMenu didSelectProfile:(NSString *)profileID
+{
+#if ENABLE(MEDIA_CONTROLS_CONTEXT_MENUS)
+    if (!_mediaControlsContextMenuPresenter)
+        return;
+
+    if (!_captionStyleMenuController)
+        return;
+
+    BlockPtr<UIMenu*(UIMenu*)> menuUpdater;
+    menuUpdater = makeBlockPtr([&](UIMenu *menu) -> UIMenu* {
+        if ([menu.identifier isEqual:captionStyleMenu.identifier])
+            return captionStyleMenu;
+
+        if (!menu.children.count)
+            return menu;
+
+        RetainPtr newChildren = adoptNS([[NSMutableArray alloc] initWithCapacity:menu.children.count]);
+
+        for (id childMenuItem in menu.children) {
+            if (auto childMenu = dynamic_objc_cast<UIMenu>(childMenuItem))
+                [newChildren addObject:menuUpdater(childMenu)];
+            else
+                [newChildren addObject:childMenuItem];
+        }
+
+        return [menu menuByReplacingChildren:newChildren.get()];
+    });
+
+    _mediaControlsContextMenuPresenter->updateVisibleMenu(menuUpdater.get());
+#endif
 }
 
 - (void)captionStyleMenuDidClose:(PlatformMenu *)menu
